<resources>
    <string name="app_name">Tickets Logger</string>
    <string name="new_issue">New Issue</string>
    <string name="edit_issue">Edit Issue</string>
    <string name="account_details">Account</string>
    <string name="new_user">New User</string>
    <string name="issues">Issues</string>
    <string name="users">Users</string>

    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="resend_verification">Resend Verification</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="name_hint">Name</string>
    <string name="phone_hint">Phone</string>
    <string name="sign_out">Sign Out</string>
    <string name="save">Save</string>
    <string name="issue_type">Issue Type</string>
    <string name="issue_title_hint">Title</string>
    <string name="issue_description_hint">Description</string>
    <string name="add_attachment">Add attachment</string>
    <string name="issue_priority">Priority</string>
    <string name="issue_status">Status: </string>

    <!-- Collections-->
    <string name="issues_collection">issues</string>
    <string name="users_collection">users</string>
    <string name="attachments_collection">attachments</string>
    <string name="comments_collection">comments</string>

    <!-- User collections fields -->
    <string name="name_field">name</string>
    <string name="phone_field">phone</string>
    <string name="profile_image_field">profile_image</string>
    <string name="role_field">role</string>
    <string name="last_login_field">last_login</string>
    <string name="user_id_field">user_id</string>
    <string name="issues_closed_field">issues_closed</string>


    <string name="assignee">Assignee</string>
    <string name="add_comments">Add Comment</string>
    <string name="comments">Comments</string>
    <string name="view_comments">View Comments</string>
    <string name="reporter_hint">Reporter</string>
    <string name="account">Account</string>

    <string name="solved_issues">Solved Issues</string>
    <string name="assigned_issues">Assigned Issues</string>
    <string name="last_login_label">Last login:</string>

    <string name="comments_dialog_tag">Comments Dialog</string>


</resources>
