<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".issues.IssueDetailsActivity">



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/issue_title_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout11"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout11"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout11">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/issue_description_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout12"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout12"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout12">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reporter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reporter_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/issue_type"
        app:layout_constraintBottom_toBottomOf="@+id/issue_type_spinner"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout12"
        app:layout_constraintTop_toTopOf="@+id/issue_type_spinner" />

    <Spinner
        android:id="@+id/issue_type_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout12"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout9" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/issue_priority"
        app:layout_constraintBottom_toBottomOf="@+id/priority_spinner"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/priority_spinner" />

    <Spinner
        android:id="@+id/priority_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/issue_type_spinner"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/issue_type_spinner" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/issue_status"
        app:layout_constraintBottom_toBottomOf="@+id/status_spinner"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/status_spinner" />

    <Spinner
        android:id="@+id/status_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/priority_spinner"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/priority_spinner" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assignee"
        app:layout_constraintBottom_toBottomOf="@+id/assignee_spinner"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/assignee_spinner" />

    <Spinner
        android:id="@+id/assignee_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/status_spinner"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/status_spinner" />

    <EditText
        android:id="@+id/edit_text_comment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/add_comments"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toStartOf="@+id/send_img"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/assignee_spinner" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/issue_type_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout11" />

    <ImageView
        android:id="@+id/send_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/edit_text_comment"
        app:layout_constraintEnd_toEndOf="@+id/assignee_spinner"
        app:layout_constraintStart_toEndOf="@+id/edit_text_comment"
        app:layout_constraintTop_toTopOf="@+id/edit_text_comment"
        app:srcCompat="@drawable/ic_send_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>