<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:contentPadding="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/profile_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_person_24dp" />

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_img"
                tools:text="@string/name_hint" />

            <TextView
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="@+id/name"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/name"
                tools:text="@string/email_hint" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/solved_issues"
                android:textAlignment="center"
                android:textColor="@color/colorGreen"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/textView15"
                app:layout_constraintStart_toStartOf="@+id/email"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/assigned_issues"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/email"
                app:layout_constraintStart_toEndOf="@+id/textView13"
                app:layout_constraintTop_toTopOf="@+id/textView13" />

            <TextView
                android:id="@+id/solved_issues"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorGreen"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/textView13"
                app:layout_constraintStart_toStartOf="@+id/textView13"
                app:layout_constraintTop_toBottomOf="@+id/textView13"
                tools:text="( 5 )" />

            <TextView
                android:id="@+id/assigned_issues"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="@+id/textView15"
                app:layout_constraintStart_toStartOf="@+id/textView15"
                app:layout_constraintTop_toBottomOf="@+id/textView15"
                tools:text="( 3 )" />

            <TextView
                android:id="@+id/last_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textAlignment="center"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/solved_issues"
                app:layout_constraintTop_toBottomOf="@+id/assigned_issues"
                tools:text="@string/last_login_field" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>